# testCPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/00_CPP_TEST/: CMakeLists.txt
source/00_CPP_TEST/01_Test/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/02_Boost/: CMakeLists.txt  README.md  main.cpp
source/00_CPP_TEST/03_VariableArgs/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/04_Thread/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/04_Thread_atomic_mutex/: CMakeLists.txt
source/00_CPP_TEST/04_Thread_atomic_mutex/00_Timer/: CMakeLists.txt  main.cpp  myUtility.hpp
source/00_CPP_TEST/04_Thread_atomic_mutex/01_Thread/: CMakeLists.txt  main.cpp  myUtility.hpp
source/00_CPP_TEST/04_Thread_atomic_mutex/02_Atomic/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/04_Thread_atomic_mutex/03_Mutex/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/04_Thread_atomic_mutex/04_MultiThreadModel/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/05_Pointer/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/05_Pointer/01_SmartPointer/: CMakeLists.txt  (+1 more)
source/00_CPP_TEST/06_Operator_and_or_not/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/07_Class/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/08_Stream/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/09_Regex/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/10_Const/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/10_Const_constexpr/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/10_Const_constexpr_cast/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/11_Sizeof/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/12_Time/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/13_Template/: CMakeLists.txt  main.cpp  main2.cpp  temp.cpp  temp.h
source/00_CPP_TEST/14_Overload/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/15_CMath/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/16_Static_namespace/: CMakeLists.txt  header1.h  header3.h  main.cpp
source/00_CPP_TEST/17_Syntax/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/18_Number/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/19_Exception/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/20_Inline/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/20_inline/: main.cpp
source/00_CPP_TEST/21_Reflection/: main.cpp
source/00_CPP_TEST/22_Enum/: CMakeLists.txt  main.cpp
source/00_CPP_TEST/22_Type/: CMakeLists.txt
source/01_CPP14_17/: CMakeLists.txt
source/01_CPP14_17/01_file_system/: main.cpp
source/01_CPP14_17/03_syntacticSugar/: CMakeLists.txt
source/01_CPP14_17/05_type_traits/: CMakeLists.txt  main.cpp
source/01_CPP14_17/06_byte_bitset/: main.cpp
source/01_CPP14_17/07_pair_tuple/: main.cpp
source/01_CPP14_17/08/: main.cpp
source/01_ModernCPP/: CMakeLists.txt
source/01_ModernCPP/01_file_system/: CMakeLists.txt  main.cpp
source/01_ModernCPP/02_any_optional_variant/: CMakeLists.txt  main.cpp
source/01_ModernCPP/03_syntacticSugar/: CMakeLists.txt  main.cpp
source/01_ModernCPP/04_sequence/: CMakeLists.txt  main.cpp
source/01_ModernCPP/05_type_traits/: CMakeLists.txt  main.cpp
source/01_ModernCPP/06_byte_bitset/: CMakeLists.txt  main.cpp
source/01_ModernCPP/07_pair_tuple/: CMakeLists.txt  main.cpp
source/01_ModernCPP/08_CPP14_17_20/: CMakeLists.txt  main.cpp
source/01_ModernCPP/08_Move_ref_construct/: CMakeLists.txt
source/01_ModernCPP/09_cxx20/: CMakeLists.txt  main.cpp
source/01_cpp/06_Operator_and_or_not/: main.cpp
source/01_cpp/09_Regex/: main.cpp
source/01_cpp/12_Time/: main.cpp
source/01_cpp/16_Static_namespace/: header1.h  header2.h  main.cpp
source/01_cpp/17_Syntax/: main.cpp
source/01_cpp/18_Number/: main.cpp
source/01_cpp/19_Exception/: main.cpp
source/01_cpp/20_Inline/: main.cpp
source/01_cpp/21_Reflection/: main.cpp
source/01_cpp/22_Type/: main.cpp
source/02_STL/: CMakeLists.txt
source/02_STL/01_Container/: CMakeLists.txt
source/02_STL/02_Functor/: CMakeLists.txt
source/02_STL/03_Algorithm/: CMakeLists.txt  main.cpp
source/02_STL/04_Iterator/: CMakeLists.txt  main.cpp
source/02_STL/07_Move_ref_construct/: CMakeLists.txt  main.cpp
source/02_STL/08_String/: CMakeLists.txt  main.cpp
source/02_modern_cpp/01_file_system/: main.cpp
source/02_modern_cpp/02_any_optional_variant/: main.cpp
source/02_modern_cpp/04_sequence/: main.cpp
source/02_modern_cpp/05_type_traits/: main.cpp
source/02_modern_cpp/06_byte_bitset/: main.cpp
source/02_modern_cpp/09_cxx20/: main.cpp
source/03_DataStructure/: CMakeLists.txt
source/03_DataStructure/00_LeetCode/: CMakeLists.txt  main.cpp
source/03_DataStructure/01_tree/: CMakeLists.txt  main.cpp
source/03_DataStructure/02_list/: CMakeLists.txt  main.cpp
source/03_DataStructure/03_algorithm/: main.cpp
source/03_stl/03_Algorithm/: main.cpp
source/03_stl/04_Iterator/: main.cpp
source/04_DesignPatterns/: CMakeLists.txt
source/04_DesignPatterns/01_Factory/: CMakeLists.txt
source/04_DesignPatterns/02_Command/: CMakeLists.txt  main.cpp
source/04_DesignPatterns/03_Facade/: CMakeLists.txt  main.cpp
source/04_DesignPatterns/04_Pimpl/: CMakeLists.txt  main.cpp
source/04_DesignPatterns/05_Singleton/: CMakeLists.txt  main.cpp
source/04_data_structure/: CMakeLists.txt
source/04_data_structure/00_LeetCode/: CMakeLists.txt  main.cpp
source/04_data_structure/01_tree/: main.cpp
source/04_data_structure/02_list/: main.cpp
source/04_data_structure/03_graph/: main.cpp
source/05_Net/: CMakeLists.txt
source/05_Net/01_Socket/: CMakeLists.txt
source/05_Net/02_Http/: main.cpp
source/05_Net/05_HPSocket/: main.cpp
source/05_Net/07_protobuf/: main.cpp
source/05_network/01_Socket/: CMakeLists.txt
source/05_network/02_Http/: main.cpp
source/06_Other/: CMakeLists.txt
source/06_Other/01_CallPy/: CMakeLists.txt  main.cpp
source/06_Other/02_MPI/: CMakeLists.txt  main.cpp
source/06_Other/02_Parallel/: CMakeLists.txt
source/06_Other/03_LexicalAnalysis/: main.cpp
source/06_Other/04_MicroKernel/: CMakeLists.txt  main.cpp
source/06_Other/05_Optimized/: README.md
source/06_Other/06_Boost/: README.md
source/resource/: testRegex.txt
(+106 files in other folders)
