cmake_minimum_required (VERSION 3.8)

add_subdirectory("01_Test")
if(WIN32)
    add_subdirectory("02_Boost")
endif()
add_subdirectory("03_VariableArgs")
add_subdirectory("04_Thread")
add_subdirectory("05_Pointer")
add_subdirectory("06_Operator_and_or_not")
add_subdirectory("07_Class")
add_subdirectory("08_Stream")
add_subdirectory("09_Regex")
add_subdirectory("10_Const_constexpr_cast")
add_subdirectory("11_Sizeof")
add_subdirectory("12_Time")
add_subdirectory("13_Template")
add_subdirectory("14_Overload")
add_subdirectory("15_CMath")
add_subdirectory("16_Static_namespace")
add_subdirectory("17_Syntax")
add_subdirectory("18_Number")
add_subdirectory("22_Enum")
